# MLflow-lightning-session

./: .gitignore  README.md  databricks.yml  mlflow_tracing_eval.ipynb  notebook.py  pyproject.toml
src/postai/: model.py  model_serving.py
